Bug 319568 - Issues with Fetch Project dialog
Summary: Issues with Fetch Project dialog
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: project (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: 1.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-09 11:14 UTC by Kevin Funk
Modified: 2013-05-23 10:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2013-05-09 11:14:40 UTC
Issues:
- With the "Do not obtain" source selected, the "Next" button is never enabled
- With the "Git" source selected, one can press "Get" without a repository URL -> crash

Mostly as a reminder for myself, I'm going to fix this.

Reproducible: Always
Comment 1 Kevin Funk 2013-05-09 17:24:59 UTC
Git commit 9d03640538f24dedc55d77174be3dd87f271df2c by Kevin Funk.
Committed on 09/05/2013 at 18:47.
Pushed by kfunk into branch '1.5'.

React on errors of VcsJob

Otherwise, if the job fails, the "Next" button is enabled

M  +8    -4    shell/projectsourcepage.cpp

http://commits.kde.org/kdevplatform/9d03640538f24dedc55d77174be3dd87f271df2c
Comment 2 Kevin Funk 2013-05-23 10:29:55 UTC
Git commit 574bfba784a60d6a7a5590e9b199f393df596d0c by Kevin Funk.
Committed on 23/05/2013 at 12:15.
Pushed by kfunk into branch '1.5'.

Fixup "Fetch Project" dialog

It's now possible to import projects from local file system again

M  +16   -6    shell/projectsourcepage.cpp

http://commits.kde.org/kdevplatform/574bfba784a60d6a7a5590e9b199f393df596d0c