Fixup "Fetch Project" dialog

It's now possible to import projects from local file system again

BUG: 319568